# Undertone

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  PROGRESS.md  README.md  clippy.toml  deny.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/undertone-core/: Cargo.toml
crates/undertone-core/src/: channel.rs  command.rs  error.rs  lib.rs  mixer.rs  profile.rs  routing.rs  state.rs
crates/undertone-daemon/: Cargo.toml
crates/undertone-daemon/src/: config.rs  main.rs  server.rs  signals.rs
crates/undertone-db/: Cargo.toml
crates/undertone-db/src/: error.rs  lib.rs  migrations.rs  queries.rs  schema.rs
crates/undertone-hid/: Cargo.toml
crates/undertone-hid/src/: alsa_fallback.rs  device.rs  error.rs  lib.rs
crates/undertone-ipc/: Cargo.toml
crates/undertone-ipc/src/: client.rs  error.rs  events.rs  lib.rs  messages.rs  server.rs
crates/undertone-pipewire/: Cargo.toml  build.rs
crates/undertone-pipewire/src/: error.rs  factory.rs  graph.rs  lib.rs  link.rs  monitor.rs  node.rs  reconcile.rs  runtime.rs
crates/undertone-ui/: Cargo.toml  build.rs
crates/undertone-ui/qml/: AppsPage.qml  ChannelStrip.qml  DevicePage.qml  MixerPage.qml  main.qml
crates/undertone-ui/src/: app.rs  bridge.rs  ipc_handler.rs  lib.rs  main.rs  state.rs
scripts/: 99-elgato-wave3.rules  install.sh  undertone-daemon.service
scripts/wireplumber/: 51-elgato.conf  elgato_wave_3.lua
ui/: AppsPage.qml  ChannelStrip.qml  main.qml
