[package]
name = "undertone-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Undertone core - business logic for channels, routing, and state"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
regex = "1.11"

[lints]
workspace = true
